// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SnackBar component should match snapshots 1`] = `
.c4 {
  margin-right: 5px;
  pointer-events: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-weight: bold;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  font-size: 16px;
  padding: 0 16px;
  height: 40px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  cursor: pointer;
  background-color: #1355d0;
  border: 1.5px solid #1355d0;
  box-shadow: 0 2px 4px 0 #cccccc;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 4px;
}

.c2 *:nth-child(2) {
  margin-left: 5px;
}

.c2 .c3 {
  font-size: 24px;
}

.c2:hover {
  box-shadow: 0 2px 4px 0 #cccccc;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c2:focus {
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
  background-color: #1355d0;
  border-color: #1355d0;
  color: #FFFFFF;
}

.c2:active {
  box-shadow: 0 2px 4px 0 #4c4c4c;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c0 {
  position: relative;
}

.c1 {
  border-radius: 50%;
  border: none;
  color: #999999;
  width: 40px;
  background-color: transparent;
  box-shadow: none;
  outline: none;
  position: absolute;
  top: 16px;
  right: 16px;
}

.c1:hover,
.c1:focus {
  box-shadow: none;
  background-color: rgba(204,204,204,0.4);
  color: #4c4c4c;
}

.c1:active {
  box-shadow: none;
  background-color: rgba(128,128,128,0.5);
  color: #4c4c4c;
}

<section
  className="c0"
  role="dialog"
>
  Text of SnackBar component
  <button
    aria-label="close SnackBar"
    className="c1 c2"
    disabled={false}
    onClick={[Function]}
    size="medium"
    type="button"
  >
    <span
      aria-hidden="true"
      className="material-icons MuiIcon-root-1 c3 c4"
      size="medium"
      style={
        Object {
          "color": "",
        }
      }
    >
      close
    </span>
  </button>
</section>
`;

exports[`SnackBar component should match snapshots 2`] = `
.c4 {
  margin-right: 5px;
  pointer-events: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-weight: bold;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  font-size: 16px;
  padding: 0 16px;
  height: 40px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  cursor: pointer;
  background-color: #1355d0;
  border: 1.5px solid #1355d0;
  box-shadow: 0 2px 4px 0 #cccccc;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 4px;
}

.c2 *:nth-child(2) {
  margin-left: 5px;
}

.c2 .c3 {
  font-size: 24px;
}

.c2:hover {
  box-shadow: 0 2px 4px 0 #cccccc;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c2:focus {
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
  background-color: #1355d0;
  border-color: #1355d0;
  color: #FFFFFF;
}

.c2:active {
  box-shadow: 0 2px 4px 0 #4c4c4c;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c0 {
  position: relative;
}

.c1 {
  border-radius: 50%;
  border: none;
  color: #999999;
  width: 40px;
  background-color: transparent;
  box-shadow: none;
  outline: none;
  position: absolute;
  top: 16px;
  right: 16px;
}

.c1:hover,
.c1:focus {
  box-shadow: none;
  background-color: rgba(204,204,204,0.4);
  color: #4c4c4c;
}

.c1:active {
  box-shadow: none;
  background-color: rgba(128,128,128,0.5);
  color: #4c4c4c;
}

<section
  className="c0"
  role="dialog"
>
  SnackBar message content 
  <button
    aria-label="close SnackBar"
    className="c1 c2"
    disabled={false}
    onClick={[Function]}
    size="medium"
    type="button"
  >
    <span
      aria-hidden="true"
      className="material-icons MuiIcon-root-1 c3 c4"
      size="medium"
      style={
        Object {
          "color": "",
        }
      }
    >
      close
    </span>
  </button>
</section>
`;

exports[`SnackBar component should match snapshots 3`] = `
.c4 {
  margin-right: 5px;
  pointer-events: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-weight: bold;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  font-size: 16px;
  padding: 0 16px;
  height: 40px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  cursor: pointer;
  background-color: #1355d0;
  border: 1.5px solid #1355d0;
  box-shadow: 0 2px 4px 0 #cccccc;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 4px;
}

.c2 *:nth-child(2) {
  margin-left: 5px;
}

.c2 .c3 {
  font-size: 24px;
}

.c2:hover {
  box-shadow: 0 2px 4px 0 #cccccc;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c2:focus {
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
  background-color: #1355d0;
  border-color: #1355d0;
  color: #FFFFFF;
}

.c2:active {
  box-shadow: 0 2px 4px 0 #4c4c4c;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c0 {
  position: relative;
}

.c1 {
  border-radius: 50%;
  border: none;
  color: #999999;
  width: 40px;
  background-color: transparent;
  box-shadow: none;
  outline: none;
  position: absolute;
  top: 16px;
  right: 16px;
}

.c1:hover,
.c1:focus {
  box-shadow: none;
  background-color: rgba(204,204,204,0.4);
  color: #4c4c4c;
}

.c1:active {
  box-shadow: none;
  background-color: rgba(128,128,128,0.5);
  color: #4c4c4c;
}

<section
  className="c0"
  role="dialog"
>
  Text of SnackBar component
  <button
    aria-label="close SnackBar"
    className="c1 c2"
    disabled={false}
    onClick={[Function]}
    size="medium"
    type="button"
  >
    <span
      aria-hidden="true"
      className="material-icons MuiIcon-root-1 c3 c4"
      size="medium"
      style={
        Object {
          "color": "",
        }
      }
    >
      close
    </span>
  </button>
</section>
`;

exports[`SnackBar component should match snapshots 4`] = `
.c4 {
  margin-right: 5px;
  pointer-events: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-weight: bold;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  font-size: 16px;
  padding: 0 16px;
  height: 40px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  cursor: pointer;
  background-color: #1355d0;
  border: 1.5px solid #1355d0;
  box-shadow: 0 2px 4px 0 #cccccc;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 4px;
}

.c2 *:nth-child(2) {
  margin-left: 5px;
}

.c2 .c3 {
  font-size: 24px;
}

.c2:hover {
  box-shadow: 0 2px 4px 0 #cccccc;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c2:focus {
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
  background-color: #1355d0;
  border-color: #1355d0;
  color: #FFFFFF;
}

.c2:active {
  box-shadow: 0 2px 4px 0 #4c4c4c;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c0 {
  position: relative;
}

.c1 {
  border-radius: 50%;
  border: none;
  color: #999999;
  width: 40px;
  background-color: transparent;
  box-shadow: none;
  outline: none;
  position: absolute;
  top: 16px;
  right: 16px;
}

.c1:hover,
.c1:focus {
  box-shadow: none;
  background-color: rgba(204,204,204,0.4);
  color: #4c4c4c;
}

.c1:active {
  box-shadow: none;
  background-color: rgba(128,128,128,0.5);
  color: #4c4c4c;
}

<section
  className="c0"
  role="dialog"
>
  Text of SnackBar component
  <button
    aria-label="close"
    className="c1 c2"
    disabled={false}
    onClick={[Function]}
    size="medium"
    type="button"
  >
    <span
      aria-hidden="true"
      className="material-icons MuiIcon-root-1 c3 c4"
      size="medium"
      style={
        Object {
          "color": "",
        }
      }
    >
      close
    </span>
  </button>
</section>
`;

exports[`SnackBar component should match snapshots 5`] = `
.c4 {
  margin-right: 5px;
  pointer-events: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-weight: bold;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  font-size: 16px;
  padding: 0 16px;
  height: 40px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  cursor: pointer;
  background-color: #1355d0;
  border: 1.5px solid #1355d0;
  box-shadow: 0 2px 4px 0 #cccccc;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 4px;
}

.c2 *:nth-child(2) {
  margin-left: 5px;
}

.c2 .c3 {
  font-size: 24px;
}

.c2:hover {
  box-shadow: 0 2px 4px 0 #cccccc;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c2:focus {
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
  background-color: #1355d0;
  border-color: #1355d0;
  color: #FFFFFF;
}

.c2:active {
  box-shadow: 0 2px 4px 0 #4c4c4c;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c0 {
  position: relative;
}

.c1 {
  border-radius: 50%;
  border: none;
  color: #999999;
  width: 40px;
  background-color: transparent;
  box-shadow: none;
  outline: none;
  position: absolute;
  top: 16px;
  right: 16px;
}

.c1:hover,
.c1:focus {
  box-shadow: none;
  background-color: rgba(204,204,204,0.4);
  color: #4c4c4c;
}

.c1:active {
  box-shadow: none;
  background-color: rgba(128,128,128,0.5);
  color: #4c4c4c;
}

<section
  className="c0"
  role="dialog"
>
  Text of SnackBar component
  <button
    aria-label="close SnackBar"
    className="c1 c2"
    disabled={false}
    onClick={[Function]}
    size="medium"
    type="button"
  >
    <span
      aria-hidden="true"
      className="material-icons MuiIcon-root-1 c3 c4"
      size="medium"
      style={
        Object {
          "color": "",
        }
      }
    >
      close
    </span>
  </button>
</section>
`;
